--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -65,7 +65,7 @@ jobs:
     needs: dockerBuildPush
     environment:
       name: prod
-      url: https://{your_prefix}-api.azurewebsites.net/
+      url: https://vm6kswvf4gium-api.azurewebsites.net/
     
     steps:
     - uses: actions/checkout@v4
@@ -77,5 +77,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: '{your_prefix}-api'
-        images: {your_registry_name}.azurecr.io/techexcel/csapi:${{github.run_number}}
+        app-name: 'vm6kswvf4gium-api'
+        images: kswvf4giumcosureg.azurecr.io/techexcel/csapi:${{github.run_number}}
